# mia-task1

./: HusseinMourad_Arduino.ino  README.md
HusseinMourad_HotelReservationSystem/: CMakeLists.txt  README.md  main.cpp
HusseinMourad_HotelReservationSystem/headers/: Guest.h  GuestMenu.h  Human.h  HumanRoom.cpp  HumanRoom.h  Monster.h  MonsterRoom.h  Receptionist.h  ReceptionistMenu.cpp  ReceptionistMenu.h  Room.h  RoomService.h  RoomsManager.h  stdafx.h
HusseinMourad_HotelReservationSystem/sources/: Guest.cpp  GuestMenu.cpp  Human.cpp  HumanRoom.cpp  Monster.cpp  MonsterRoom.cpp  Receptionist.cpp  Room.cpp  RoomService.cpp  RoomsManager.cpp
