cmake_minimum_required(VERSION 3.0)
project(HusseinMourad_HotelReservationSystem)

set(CMAKE_CXX_STANDARD 14)

add_executable(HusseinMourad_HotelReservationSystem main.cpp sources/Guest.cpp headers/stdafx.h sources/Monster.cpp headers/Monster.h headers/Guest.h headers/Room.h sources/Room.cpp headers/RoomService.cpp headers/RoomService.h headers/Human.cpp headers/Human.h)
